Correspondence app can read xlsx file

--- a/apps/correspondences/templates/correspondences/correspondence_list.html
+++ b/apps/correspondences/templates/correspondences/correspondence_list.html
@@ -12,13 +12,16 @@
   {% for c in correspondences %}
     <li>
       <a href="{% url 'correspondences:detail' c.pk %}">{{ c.name }}</a>
+
       - Entries: {{ c.entries.count }}
       {% if c.is_public %}
         (Public)
       {% else %}
         (Private)
       {% endif %}
+      <a href="{% url 'correspondences:delete' c.id %}">🗑️</a>
     </li>
+    
   {% endfor %}
 </ul>
 {% else %}
