--- a/apps/correspondences/templates/correspondences/correspondence_upload.html
+++ b/apps/correspondences/templates/correspondences/correspondence_upload.html
@@ -19,7 +19,7 @@ Each line must contain:
   <li><strong>display_name</strong> (required)</li>
   <li><strong>type</strong> (optional)</li>
 </ul>
-Must be csv,tsv or txt files.
+Must be csv,tsv, txt or xlsx files.
 </p>
 
 <form method="post" enctype="multipart/form-data">
