--- a/apps/correspondences/templates/correspondences/correspondence_detail.html
+++ b/apps/correspondences/templates/correspondences/correspondence_detail.html
@@ -14,6 +14,8 @@
 
 
   <a href="{% url 'correspondences:upload' correspondence.id %}"> 📤Upload / Replace entries</a>
+  <a href="{% url 'correspondences:delete' correspondence.id %}">🗑️Delete</a>
+
 
 </p>
 
