--- a/apps/core/templates/core/admin_page.html
+++ b/apps/core/templates/core/admin_page.html
@@ -21,6 +21,7 @@
       <li><a href="{% url 'campaigns:template_list' %}">Templates</a></li>
       <li><a href="{% url 'teams:teams' %}">Équipes</a></li>
       <li><a href="{% url 'simulations:simu' %}">Simulations</a></li>
+      <li><a href="{% url 'publications:admin_requests' %}">Publication Requests</a></li>
     </ul>
   {% endif %}
 
