--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -7,6 +7,7 @@
   <title>{% block title %}InSillyClo{% endblock %}</title>
 
   <link rel="stylesheet" href="{% static 'css/site.css' %}">
+
 </head>
 
 <body>
@@ -55,6 +56,17 @@
 
 <main class="container">
   <div class="card">
+
+  {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+        <li class="{{ message.tags }}">{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+  
+
+
     {% block content %}{% endblock %}
   </div>
 </main>
