--- a/apps/teams/templates/teams/team_detail.html
+++ b/apps/teams/templates/teams/team_detail.html
@@ -7,21 +7,22 @@
 
 <h2>Members</h2>
 <ul>
-  {% for membership in memberships %}
+  {% for user in members %}
     <li>
-      {{ membership.user.email }}
-      {% if is_owner and membership.user.id != team.owner_id %}
+      {{ user.email }}
+      {% if is_owner and user.id != team.owner_id %}
         <form method="post"
               action="{% url 'teams:remove_member' team.id %}"
               style="display:inline;">
           {% csrf_token %}
-          <input type="hidden" name="user_id" value="{{ membership.user.id }}">
+          <input type="hidden" name="user_id" value="{{ user.id }}">
           <button type="submit">Remove</button>
         </form>
       {% endif %}
     </li>
   {% endfor %}
 </ul>
+
 
 {% if is_owner %}
   <h2>Add member</h2>
