Back button in plasmid detail to correct URL

--- a/apps/plasmids/templates/plasmids/search.html
+++ b/apps/plasmids/templates/plasmids/search.html
@@ -19,7 +19,7 @@
 
     <!-- Contraintes sur annotations -->
     <div class="card">
-        <h3>Annotation constraints</h3>
+        <h3>Annotations</h3>
         <div id="annotation-constraints"></div>
         <button type="button" class="btn btn-secondary" id="add-annotation">
             + Add annotation constraint
@@ -28,7 +28,7 @@
 
     <!-- Contraintes sur sites de restriction -->
     <div class="card">
-        <h3>Restriction enzyme sites</h3>
+        <h3>Restriction Enzyme Sites</h3>
         <div id="restriction-constraints"></div>
         <button type="button" class="btn btn-secondary" id="add-restriction">
             + Add restriction constraint
