--- a/apps/plasmids/templates/plasmids/plasmid_detail.html
+++ b/apps/plasmids/templates/plasmids/plasmid_detail.html
@@ -13,11 +13,14 @@
 <div class="plasmid-header">
     <div style="display:flex; justify-content:space-between; align-items:center;">
         <h1>{{ plasmid.identifier }}</h1>
-        <a class="btn" href="{% url 'plasmids:plasmid_list' %}">
-            Back to Plasmid List
-        </a>
+        <a class="btn" href="{% if request.META.HTTP_REFERER %}{{ request.META.HTTP_REFERER }}{% else %}{% url 'plasmid_list' %}{% endif %}">
+            Back
+        </a>    
     </div>
 </div>
+
+
+
 
 <!-- Metadata -->
 <div class="plasmid-metadata">
