Revert "Merge branch 'main' into muyao_publication"
This reverts commit 553f6e4b490d8cb514f0c90a2c99838405b2d1d0, reversing
changes made to b514175b8eb2fb1de2628e781797664670c8a644.

--- a/apps/campaigns/templates/campaigns/template_list.html
+++ b/apps/campaigns/templates/campaigns/template_list.html
@@ -27,6 +27,7 @@
             <tr>
                 <th style="width:40px;"></th>
                 <th>Name</th>
+                <th>CSV</th>
                 <th>XLSX</th>
                 <th>Visibility</th>
                 <th>Type</th>
@@ -44,6 +45,13 @@
                     <td></td>
 
                     <td class="template-name">{{ template.name }}</td>
+
+                    <td>
+                        <a class="download-link"
+                           href="{% url 'campaigns:download_public_template' template.id %}?format=csv">
+                            CSV
+                        </a>
+                    </td>
 
                     <td>
                         <a class="download-link"
@@ -77,6 +85,13 @@
                     </td>
 
                     <td class="template-name">{{ template.name }}</td>
+
+                    <td>
+                        <a class="download-link"
+                           href="{% url 'campaigns:download_template' template.id %}?format=csv">
+                            CSV
+                        </a>
+                    </td>
 
                     <td>
                         <a class="download-link"
