--- a/apps/publications/templates/publications/admin_requests.html
+++ b/apps/publications/templates/publications/admin_requests.html
@@ -32,7 +32,14 @@
           <td>{{ pub.requested_by.email }}</td>
 
           <td>
-            <div><strong>{{ pub.target }}</strong></div>
+            <div>
+                <strong>
+                  <a href="{% url 'publications:admin_detail' pub.id %}">
+                    {{ pub.target }}
+                  </a>
+                </strong>
+            </div>
+
             <div class="muted">
               {{ pub.target_content_type.app_label }}/{{ pub.target_content_type.model }}
               (id={{ pub.target_object_id }})
