Refactor teams into accounts, clean migrations and templates

--- a/apps/accounts/templates/accounts/admin_team_detail.html
+++ b/apps/accounts/templates/accounts/admin_team_detail.html
@@ -17,5 +17,5 @@
   {% endfor %}
 </ul>
 
-<p><a href="{% url 'teams:admin_team_list' %}">← Back to all teams</a></p>
+<p><a href="{% url 'accounts:admin_team_list' %}">← Back to all teams</a></p>
 {% endblock %}
