--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -12,7 +12,7 @@
   <li><a href="{% url 'simulations:simu' %}">Campaign Simulation</a></li>
   <li><a href="{% url 'plasmids:plasmid_list' %}">Plasmid List</a></li>
   <li><a href="{% url 'plasmids:search' %}">Browse plasmids</a></li>
-  <li><a href="{% url 'teams:teams' %}">Teams</a></li>
+  <li><a href="{% url 'accounts:teams' %}">Teams</a></li>
   <li><a href="{% url 'correspondences:list' %}">My correspondence Table</a></li>
 </ul>
 {% endblock %}
