--- a/apps/core/templates/core/admin_page.html
+++ b/apps/core/templates/core/admin_page.html
@@ -15,7 +15,7 @@
     <h2>Gestion</h2>
     <ul>
       <li><a href="{% url 'campaigns:template_list' %}">Templates</a></li>
-      <li><a href="{% url 'teams:admin_team_list' %}">Teams</a></li>
+      <li><a href="{% url 'accounts:admin_team_list' %}">Teams</a></li>
       <li><a href="{% url 'simulations:simu' %}">Simulations</a></li>
     </ul>
 
